@@ -11,6 +11,8 @@
 	FIXED - SPLITPOS was ignored with VIASTYLE angled (thanks to uhtred)
 	FIXED - 'AICONOUTLINECOLOR none' is actually valid now (thanks to mgb & Leathon)
         FIXED - readdir() loop never stops, on some systems (thanks to jerebernard)
+        FIXED - bad regexp in the MRTG DS plugin (thanks to Matt McMahon)
+        FIXED - 0.96 had a new 'time' DS plugin - now documented!
         ADDED - USEICONSCALE no longer has special dependencies - and the colours are nicer too.
 	ADDED - Option of a dropdown selector to navigate between maps (in full-size view)
 	ADDED - Maps can be organised into groups in Cacti plugin. These appear
